[package]
name = "fs-err"
description = "A drop-in replacement for std::fs with more helpful error messages."
version = "3.1.3"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
edition = "2018"
repository = "https://github.com/andrewhickman/fs-err"
documentation = "https://docs.rs/fs-err"
categories = ["command-line-interface", "filesystem"]
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [".github", ".gitignore", "README.tpl"]

[dependencies]
tokio = { version = "1.21", optional = true, default-features = false, features = ["fs"] }

[build-dependencies]
autocfg = "1"

[dev-dependencies]
serde_json = "1.0.64"

[features]
# Allow custom formatting of the error source
#
# When enabled errors emit `std::error::Error::source()` as Some (default is `None`) and
# no longer include the original `std::io::Error` source in the `Display` implementation.
# This is useful if errors are wrapped in another library such as Anyhow.
expose_original_error = []

[package.metadata.release]
tag-name = "{{version}}"
sign-tag = true

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "html_root_url = \"https://docs\\.rs/fs-err/.*?\""
replace = "html_root_url = \"https://docs.rs/fs-err/{{version}}\""
exactly = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
