[package]
name = "fs-err"
description = "A drop-in replacement for std::fs with more helpful error messages."
version = "3.1.3"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
edition = "2018"
repository = "https://github.com/andrewhickman/fs-err"
documentation = "https://docs.rs/fs-err"
categories = ["command-line-interface", "filesystem"]
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [".github", ".gitignore", "README.tpl"]
rust-version = "1.65.0"

[lints.clippy]
# We use build.rs to conditionally compile features for newer Rust versions
incompatible_msrv = "allow"

[dependencies]
tokio = { version = "1.21", optional = true, default_features = false, features = ["fs"] }
path_facts = { version = "0.1.0", optional = true }

[build-dependencies]
autocfg = "1"

[dev-dependencies]
serde_json = "1.0.64"
tempfile = "3.0"
pretty_assertions = "1.4.1"

[features]
# Debug filesystem errors faster by exposing more information. Suggested for use in `dev-dependencies`.
# Note: Requires Rust 1.79+ due to path_facts dependency
debug = ["path_facts", "tokio?/rt-multi-thread"]

# Allow custom formatting of the error source
#
# When enabled errors emit `std::error::Error::source()` as Some (default is `None`) and
# no longer include the original `std::io::Error` source in the `Display` implementation.
# This is useful if errors are wrapped in another library such as Anyhow.
expose_original_error = []

[package.metadata.release]
tag-name = "{{version}}"
sign-tag = true

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "html_root_url = \"https://docs\\.rs/fs-err/.*?\""
replace = "html_root_url = \"https://docs.rs/fs-err/{{version}}\""
exactly = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
